adding logic for all endpoints except game click
